Fix fdo#84591 Styles dropdown disappears when clicked on submenu

The style "WB_NOPOINTERFOCUS" for the button set, now it works under
Windows and Linux.
But why work this under Linux without the style "WB_NOPOINTERFOCUS"
i don't now.

Change-Id: If1b32d1f53c12eb86ab2f92c531385578d82ae59